java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldPrimitive-hints.pass
Create field t in org.netbeans.test.java.hints.CreateFieldPrimitive
Create parameter t
Create local variable t
